; ModuleID = '/home/carl/AnghaBench/h2o/lib/common/extr_http1client.c_on_error.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/common/extr_http1client.c_on_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_h2o_http1client_t = type { %struct.TYPE_8__, i32 (%struct.TYPE_8__*, i32, i32)*, %struct.TYPE_7__, i64 }
%struct.TYPE_8__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 (%struct.TYPE_8__*, i8*)*, i32 (%struct.TYPE_8__*, i8*, i32, i32, i32, i32*, i32, i32)* }
%struct.TYPE_7__ = type { i32 }

@H2O_SEND_STATE_ERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.st_h2o_http1client_t*, i8*)* @on_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @on_error(%struct.st_h2o_http1client_t* %0, i8* %1) #0 {
  %3 = alloca %struct.st_h2o_http1client_t*, align 8
  %4 = alloca i8*, align 8
  store %struct.st_h2o_http1client_t* %0, %struct.st_h2o_http1client_t** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.st_h2o_http1client_t*, %struct.st_h2o_http1client_t** %3, align 8
  %6 = getelementptr inbounds %struct.st_h2o_http1client_t, %struct.st_h2o_http1client_t* %5, i32 0, i32 3
  store i64 0, i64* %6, align 8
  %7 = load %struct.st_h2o_http1client_t*, %struct.st_h2o_http1client_t** %3, align 8
  %8 = getelementptr inbounds %struct.st_h2o_http1client_t, %struct.st_h2o_http1client_t* %7, i32 0, i32 2
  %9 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  switch i32 %10, label %46 [
    i32 128, label %11
    i32 130, label %22
    i32 129, label %32
  ]

11:                                               ; preds = %2
  %12 = load %struct.st_h2o_http1client_t*, %struct.st_h2o_http1client_t** %3, align 8
  %13 = getelementptr inbounds %struct.st_h2o_http1client_t, %struct.st_h2o_http1client_t* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 1
  %16 = load i32 (%struct.TYPE_8__*, i8*, i32, i32, i32, i32*, i32, i32)*, i32 (%struct.TYPE_8__*, i8*, i32, i32, i32, i32*, i32, i32)** %15, align 8
  %17 = load %struct.st_h2o_http1client_t*, %struct.st_h2o_http1client_t** %3, align 8
  %18 = getelementptr inbounds %struct.st_h2o_http1client_t, %struct.st_h2o_http1client_t* %17, i32 0, i32 0
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @h2o_iovec_init(i32* null, i32 0)
  %21 = call i32 %16(%struct.TYPE_8__* %18, i8* %19, i32 0, i32 0, i32 %20, i32* null, i32 0, i32 0)
  br label %46

22:                                               ; preds = %2
  %23 = load %struct.st_h2o_http1client_t*, %struct.st_h2o_http1client_t** %3, align 8
  %24 = getelementptr inbounds %struct.st_h2o_http1client_t, %struct.st_h2o_http1client_t* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 0
  %27 = load i32 (%struct.TYPE_8__*, i8*)*, i32 (%struct.TYPE_8__*, i8*)** %26, align 8
  %28 = load %struct.st_h2o_http1client_t*, %struct.st_h2o_http1client_t** %3, align 8
  %29 = getelementptr inbounds %struct.st_h2o_http1client_t, %struct.st_h2o_http1client_t* %28, i32 0, i32 0
  %30 = load i8*, i8** %4, align 8
  %31 = call i32 %27(%struct.TYPE_8__* %29, i8* %30)
  br label %46

32:                                               ; preds = %2
  %33 = load %struct.st_h2o_http1client_t*, %struct.st_h2o_http1client_t** %3, align 8
  %34 = getelementptr inbounds %struct.st_h2o_http1client_t, %struct.st_h2o_http1client_t* %33, i32 0, i32 1
  %35 = load i32 (%struct.TYPE_8__*, i32, i32)*, i32 (%struct.TYPE_8__*, i32, i32)** %34, align 8
  %36 = icmp ne i32 (%struct.TYPE_8__*, i32, i32)* %35, null
  br i1 %36, label %37, label %45

37:                                               ; preds = %32
  %38 = load %struct.st_h2o_http1client_t*, %struct.st_h2o_http1client_t** %3, align 8
  %39 = getelementptr inbounds %struct.st_h2o_http1client_t, %struct.st_h2o_http1client_t* %38, i32 0, i32 1
  %40 = load i32 (%struct.TYPE_8__*, i32, i32)*, i32 (%struct.TYPE_8__*, i32, i32)** %39, align 8
  %41 = load %struct.st_h2o_http1client_t*, %struct.st_h2o_http1client_t** %3, align 8
  %42 = getelementptr inbounds %struct.st_h2o_http1client_t, %struct.st_h2o_http1client_t* %41, i32 0, i32 0
  %43 = load i32, i32* @H2O_SEND_STATE_ERROR, align 4
  %44 = call i32 %40(%struct.TYPE_8__* %42, i32 0, i32 %43)
  br label %45

45:                                               ; preds = %37, %32
  br label %46

46:                                               ; preds = %2, %45, %22, %11
  %47 = load %struct.st_h2o_http1client_t*, %struct.st_h2o_http1client_t** %3, align 8
  %48 = call i32 @close_client(%struct.st_h2o_http1client_t* %47)
  ret void
}

declare dso_local i32 @h2o_iovec_init(i32*, i32) #1

declare dso_local i32 @close_client(%struct.st_h2o_http1client_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
